--- a/Proyecto1_BDA/src/main/java/presentacion/PanelRealizarPedidoCliente.form
+++ b/Proyecto1_BDA/src/main/java/presentacion/PanelRealizarPedidoCliente.form
@@ -263,7 +263,7 @@
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="3c" green="a2" red="d8" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="atras"/>
+            <Property name="text" type="java.lang.String" value="Regresar"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAtrasActionPerformed"/>
