--- a/Proyecto1_BDA/src/main/java/presentacion/PanelClienteEntrada.form
+++ b/Proyecto1_BDA/src/main/java/presentacion/PanelClienteEntrada.form
@@ -246,6 +246,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Consultar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
