--- a/Proyecto1_BDA/src/main/java/presentacion/PanelPedidosExpress.form
+++ b/Proyecto1_BDA/src/main/java/presentacion/PanelPedidosExpress.form
@@ -104,7 +104,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="TablaPedidos">
+            <Component class="javax.swing.JTable" name="tblPedidos">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="3c" green="a2" red="d8" type="rgb"/>
